--- a/photo/templates/photo/detail.html
+++ b/photo/templates/photo/detail.html
@@ -1,19 +1,22 @@
 {% extends 'base.html' %}
 {% block title %}
-    {{ object.text|truncatechars:10 }}
+    {{ object.title|truncatechars:10 }}
 {% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 panel panel-default">
-            <p><img src="{{ object.photo.url }}" style="width:100%;"></p>
-            <button type="button" class="btn btn-outline-primary btn-sm">{{ object.author.username }}</button>
+
+
+<p><img src="{{ object.photo.url }}" style="width:100%;"></p>
+<h2>{{ object.title }}</h2>
+
+<h3>{{ object.author.username }}</h3>
+
             <p>{{ object.text|linebreaksbr }}</p>
 
+            <button type="button" class="btn btn-outline-primary btn-sm">{{ object.author.username }}</button>
             <a href="{% url 'photo:photo_delete' pk=object.id %}" class="btn btn-outline-danger btn-sm float-right">Delete</a>
             <a href="{% url 'photo:photo_update' pk=object.id %}" class="btn btn-outline-success btn-sm float-right">Update</a>
-        </div>
-        <div class="col-md-2"></div>
-    </div>
+
+
+
 {% endblock %}
