before delete hashtags

--- a/accounts/templates/registration/logout.html
+++ b/accounts/templates/registration/logout.html
@@ -2,7 +2,8 @@
 {% block title %}- Logout{% endblock %}
 
 {% block content %}
+<div id="main-sub">
 <div class="alert alert-info">You have benn successfully logged out.</div>
 <a class="btn btn-primary" href="{% url 'login' %}">Click to Login</a>
-
+</div>
 {% endblock %}
