--- a/accounts/templates/registration/register_done.html
+++ b/accounts/templates/registration/register_done.html
@@ -2,7 +2,8 @@
 {% block title %}- Registration Done{% endblock %}
 
 {% block content %}
+<div id="main-sub">
 <div class="alert alert-info">Registration Success. Welcome, {{ new_user.username }}</div>
 <a class="btn btn-info" href="/">Move to main</a>
-
+</div>
 {% endblock %}
