--- a/templates/base.html
+++ b/templates/base.html
@@ -64,17 +64,18 @@
 									<img src="{% static 'img/gallery_mimi.png' %}" class="profile">
 									<img src="{% static 'img/gallery_seunghee.png' %}" class="profile">
 									<img src="{% static 'img/gallery_yooa.png' %}" class="profile">
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
 								</section>
 								<section>
-									<h2>Follow me on ...</h2>
+									<h2>About Oh My Girl</h2>
+									<p>Oh My Girl (Korean: 오마이걸, also stylized as OH MY GIRL and OMG) is a South Korean girl group formed by WM Entertainment. The group is composed of seven members: Hyojung, Mimi, YooA, Seunghee, Jiho, Binnie and Arin. Oh My Girl debuted on April 20, 2015, with an eponymous extended play.</p>
+
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="http://ohmy-girl.com/omg_official" class="icon brands fa-internet-explorer"><span class="label">Official Site</span></a></li>
+										<li><a href="http://cafe.daum.net/-ohmygirl" class="icon solid fa-users"><span class="label">Fan Site</span></a></li>
+										<li><a href="https://www.youtube.com/channel/UC-qYkzKFdekoEniRu_FS3zg" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+										<li><a href="https://www.instagram.com/wm_ohmygirl/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://twitter.com/WM_OHMYGIRL" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/official.ohmygirl" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
