--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -2,11 +2,12 @@
 {% block title %}- Login{% endblock %}
 
 {% block content %}
+<div id="main-sub">
 <div class="alert alert-info">Please enter your login informations.</div>
 <form action="" method="POST">
     {{ form.as_p }}
     {% csrf_token %}
     <input class="btn btn-primary" type="submit" value="Login">
 </form>
-
+</div>
 {% endblock %}
