--- a/photo/templates/photo/delete.html
+++ b/photo/templates/photo/delete.html
@@ -2,7 +2,7 @@
 {% block title %}- Delete{% endblock %}
 
 {% block content %}
-
+<div id="main-sub">
 <div class="alert alert-info">
     Do you want to delete {{ object }}?
 </div>
@@ -11,4 +11,5 @@
     {% csrf_token %}
     <input type="submit" class="btn btn-danger" value="Confirm">
 </form>    
+</div>
 {% endblock %}
