--- a/photo/templates/photo/list.html
+++ b/photo/templates/photo/list.html
@@ -5,15 +5,36 @@
 {% block content %}
 <div id="main">
 
-{% for post in object_list %}
+    {% for post in object_list %}
     <article class="thumb">
-        <a href="{% url 'photo:photo_detail' pk=post.id %}" class="image"><img src="{{ post.photo_thumbnail.url }}" alt="" /></a>
+        <a href="{% url 'photo:photo_detail' pk=post.id %}" class="image"><img src="{{ post.photo_thumbnail.url }}"
+                alt="" /></a>
         <h2>{{ post.title }}</h2>
         <p>{{ post.author.username }}</p>
     </article>
 
     {% endfor %}
-    <p>1 page</p>
+
+    {% if is_paginated %}
+    <div class="pagination">
+        {% if page_obj.has_previous %}
+                <a class="button" href="{% url 'photo:photo_list' %}?page={{ page_obj.previous_page_number }}" tabindex="-1">Previous</a>
+        {% else %}
+            <a class="button disabled" href="#" tabindex="-1">Previous</a>
+        {% endif %}
+
+        {% for object in page_obj.paginator.page_range %}
+                <a class="button {% if page_obj.number == forloop.counter %}disabled{% endif %}" href="{{ request.path }}?page={{ forloop.counter }}">{{ forloop.counter }}</a>
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+                <a class="button" href="{% url 'photo:photo_list' %}?page={{ page_obj.next_page_number }}">Next</a>
+        {% else %}
+                <a class="button disabled" href="#">Next</a>
+        {% endif %}
+    </div>
+{% endif %}
+
 </div>
 
 {% endblock %}
