--- a/photo/templates/photo/upload.html
+++ b/photo/templates/photo/upload.html
@@ -2,9 +2,11 @@
 {% block title %}- Upload{% endblock %}
 
 {% block content %}
+<div id="main-sub">
 <form action="" method="post" enctype="multipart/form-data">
     {{ form.as_p }}
     {% csrf_token %}
     <input type="submit" class="btn btn-primary" value="Upload">
 </form>
+</div>
 {% endblock %}
