--- a/templates/base_1.html
+++ b/templates/base_1.html
@@ -63,3 +63,7 @@
 </body>
 
 </html>
+
+
+OMG_ALL_MEMBER = ['단체', '효정', '미미', '유아', '승희', '지호', '비니', '아린']
+OMG_ALL_MEMBER_DIC = {'hyojung':'효정', 'mimi':'미미', 'yooa':'유아', 'seunghee':'승희', 'jiho':'지호', 'binnie':'비니', 'arin':'아린'}
