--- a/templates/base_1.html
+++ b/templates/base_1.html
@@ -63,6 +63,7 @@
 </body>
 
 </html>
+<noscript><link rel="stylesheet" href="{% static 'css/noscript.css' %}" /></noscript>
 
 
 OMG_ALL_MEMBER = ['단체', '효정', '미미', '유아', '승희', '지호', '비니', '아린']
