--- a/photo/templates/photo/list.html
+++ b/photo/templates/photo/list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}- List{% endblock %}
+{% block title %}{% endblock %}
 
 {% block content %}
 <div id="main">
