--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
+		<link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon" />
+		<link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon" />
+
+출처: https://esajin.kr/28 [서관덕의 시간이 머문 작은 공간]
+
 		<!-- Primary Meta Tags -->
 
 		<meta name="title" content="Oh My Girl Database">
