--- a/photo/templates/photo/randomlist.html
+++ b/photo/templates/photo/randomlist.html
@@ -9,7 +9,7 @@
 
     {% for post in object_list %}
     <article class="thumb">
-        <a href="{% url 'photo:photo_detail' pk=post.id %}" class="image"><img src="{{ post.photo_thumbnail.url }}"
+        <a href="{{ post.photo.url }}" class="image"><img src="{{ post.photo_thumbnail.url }}"
                 alt="" /></a>
         <h2>{{ post.title }}</h2>
     </article>
