--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@
 							<div>
 								<section>
 									<h2>Search by member</h2>
+									<a href="{% url 'photo:photo_list' %}?members=all"><img src="{% static 'img/gallery_all.png' %}" class="profile"></a>
 									<a href="{% url 'photo:photo_list' %}?members=hyojung"><img src="{% static 'img/gallery_hyojung.png' %}" class="profile"></a>
 									<a href="{% url 'photo:photo_list' %}?members=mimi"><img src="{% static 'img/gallery_mimi.png' %}" class="profile"></a>
 									<a href="{% url 'photo:photo_list' %}?members=yooa"><img src="{% static 'img/gallery_yooa.png' %}" class="profile"></a>
@@ -102,6 +103,9 @@
 												<li><a href="https://twitter.com/WM_OHMYGIRL" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://www.facebook.com/official.ohmygirl" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 											</ul>
+
+											<h2>About Oh My DB</h2>
+											<p> admin : ssfwl99@gmail.com</p>
 										</section>
 
 							</div>
