--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2122,9 +2122,7 @@ input, select, textarea {
 		text-align: center;
 	}
 		.pagination .button{
-			display: block;
-			width: 100%;
-			height: 100%;
+			display: inline;
 		}
 
 /* detail-menu */
