--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
 							<div>
 								<section>
 									<h2>Search by member</h2>
-									<a href="{% url 'photo:photo_list' %}?members=all"><img src="{% static 'img/gallery_all.png' %}" class="profile"></a>
+									<a href="{% url 'photo:photo_list' %}?members=group"><img src="{% static 'img/gallery_all.png' %}" class="profile"></a>
 									<a href="{% url 'photo:photo_list' %}?members=hyojung"><img src="{% static 'img/gallery_hyojung.png' %}" class="profile"></a>
 									<a href="{% url 'photo:photo_list' %}?members=mimi"><img src="{% static 'img/gallery_mimi.png' %}" class="profile"></a>
 									<a href="{% url 'photo:photo_list' %}?members=yooa"><img src="{% static 'img/gallery_yooa.png' %}" class="profile"></a>
