--- a/ohmygirl/app/views/index.ejs
+++ b/ohmygirl/app/views/index.ejs
@@ -1,18 +1,18 @@
 <div id="main">
 
-        <% pics.forEach((pic) => { %>
+        <% ohmygirls.forEach((omg) => { %>
                 <article class="thumb">
-                        <a href="<%= pic.path_original %>" class="image">
-                                <img src = "<%= pic.path_thumbnail %>" alt="">
+                        <a href="<%= omg.path_original %>" class="image">
+                                <img src = "<%= omg.path_thumbnail %>" alt="">
                         </a>
-                        <h2><a href="photo"><%= pic.who %></a></h2>
+                        <h2><a href="photo"><%= omg.who %></a></h2>
                 </article>
         <% }) %>
 
     <!-- <article class="thumb">
         <a href="images/1.jpg" class="image"><img src="images/1.jpg"
                 alt="" /></a>
-        <h2><a href="images/1.jpg"><%= pics %></a></h2>
+        <h2><a href="images/1.jpg"></a></h2>
     </article> -->
 
        <!--
