member find added

--- a/ohmygirl/app/views/layout.ejs
+++ b/ohmygirl/app/views/layout.ejs
@@ -74,14 +74,14 @@
 							<div>
 								<section>
 									<h2>Search by member</h2>
-									<a href="{% url 'photo:photo_list' %}?members=group"><img src="img/gallery_all.png" class="profile"></a>
-									<a href="{% url 'photo:photo_list' %}?members=hyojung"><img src="img/gallery_hyojung.png" class="profile"></a>
-									<a href="{% url 'photo:photo_list' %}?members=mimi"><img src="img/gallery_mimi.png" class="profile"></a>
-									<a href="{% url 'photo:photo_list' %}?members=yooa"><img src="img/gallery_yooa.png" class="profile"></a>
-									<a href="{% url 'photo:photo_list' %}?members=seunghee"><img src="img/gallery_seunghee.png" class="profile"></a>
-									<a href="{% url 'photo:photo_list' %}?members=jiho"><img src="img/gallery_jiho.png" class="profile"></a>
-									<a href="{% url 'photo:photo_list' %}?members=binnie"><img src="img/gallery_binnie.png" class="profile"></a>
-									<a href="{% url 'photo:photo_list' %}?members=arin"><img src="img/gallery_arin.png" class="profile"></a>
+									<a href="/"><img src="img/gallery_all.png" class="profile"></a>
+									<a href="/find/hyojung"><img src="img/gallery_hyojung.png" class="profile"></a>
+									<a href="/find/mimi"><img src="img/gallery_mimi.png" class="profile"></a>
+									<a href="/find/yooa"><img src="img/gallery_yooa.png" class="profile"></a>
+									<a href="/find/seunghee"><img src="img/gallery_seunghee.png" class="profile"></a>
+									<a href="/find/jiho"><img src="img/gallery_jiho.png" class="profile"></a>
+									<a href="/find/binnie"><img src="img/gallery_binnie.png" class="profile"></a>
+									<a href="/find/arin"><img src="img/gallery_arin.png" class="profile"></a>
 								</section>
 
 								<p class="copyright">
